<resources>
    <string name="app_name">EntregasIntrodMobiles</string>
    <string name="addButtonString">Add</string>
    <string name="subtractButtonString">Subtract</string>
    <string name="resetButtonString">Reset</string>
    <string name="entregable_1String">Entregable 1</string>
    <string name="entregable2resultado">Resultado:</string>
    <string name="entregable2plus">+</string>
    <string name="entregable2multiply">*</string>
    <string name="entregable2minus">-</string>
    <string name="entregable2divide">/</string>
    <string name="entregable_2String">Entregable 2</string>
    <string name="errorText">Error</string>
    <string name="operando_1">Operando 1</string>
    <string name="operando_2">Operando 2</string>
    <string name="resultado">Resultado</string>
    <string name="suma">SUMA</string>
    <string name="resta">RESTA</string>
    <string name="multiplicacion">MULTIPLICACION</string>
    <string name="division">DIVISION</string>
    <string name="ms">ms</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="entregable_3String">Entregable 3</string>
    <string name="ejecutar_intentservice">Ejecutar IntentService</string>
    <string name="ejecutar_service">Ejecutar Service</string>
    <string name="ejecutar_boundservice">Ejecutar BoundService</string>
    <string name="entregable_4">Entregable 4</string>
    <string name="introducci_n_a_la_programaci_n_de_dispositivos_m_viles">Introducción a la Programación de Dispositivos Móviles</string>
    <string name="nahuel_dallacamina_ortea">Nahuel Dallacamina Ortea</string>
    <string name="_2do_cuatrimestre_2019">2do Cuatrimestre - 2019</string>
</resources>
