<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introducci_n_a_la_programaci_n_de_dispositivos_m_viles"
            android:textSize="25sp"
            android:layout_marginBottom="10sp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginBottom="10sp"
            android:text="@string/nahuel_dallacamina_ortea"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_2do_cuatrimestre_2019"
            android:textSize="12sp"
            android:layout_marginBottom="10sp"
        />

        <Button
            android:id="@+id/entregableUnoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entregable_1String" />

        <Button
            android:id="@+id/entregableDosButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entregable_2String" />

        <Button
            android:id="@+id/entregableTresButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entregable_3String" />

        <Button
            android:id="@+id/entregableCuatroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entregable_4" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>