<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entregable4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
    >

        <Button
            android:id="@+id/entregable4IntentServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejecutar_intentservice"
        />

        <TextView
            android:id="@+id/entregable4IntentServiceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
        />

        <Button
            android:id="@+id/entregable4ServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejecutar_service"
        />

        <TextView
            android:id="@+id/entregable4ServiceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
        />

        <Button
            android:id="@+id/entregable4BoundServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejecutar_boundservice"
        />

        <TextView
            android:id="@+id/entregable4BoundServiceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>